Clean up Atbash code and fix alignment issue in Gallery

--- a/src/components/Gallery/CipherGallery.css
+++ b/src/components/Gallery/CipherGallery.css
@@ -1,6 +1,10 @@
+.galleryContainer {
+    display: flex;
+    justify-content: center;
+}
+
 .gallery {
     width: 80%;
-    place-self: center;
     margin-bottom: 30px;
 }
 
